# ESPEasy

./: .atom-build.yml  .gitignore  .gitmodules  .gitpod.yml  .readthedocs.yaml  .travis.yml  Command.ino  Controller.ino  Devices.ino  ESPEasy.ino  Hardware.ino  License.txt  Misc.ino  Networking.ino  README  README.md  Serial.ino  Version.h  WebServer.ino  Wifi.ino  _C001.ino  _C002.ino  _C003.ino  _C004.ino  _C005.ino  _C006.ino  _C007.ino  _C008.ino  _C009.ino  _C010.ino  _C011.ino  _C012.ino  _C022.ino  _C025.ino  _LIFX.ino  _N002_Buzzer.ino  _P001_Switch.ino  _P002_ADC.ino  _P003_Pulse.ino  _P004_Dallas.ino  (+109 more)
.github/: CONTRIBUTING.md  issue_template.md  stale.yml
.theia/: settings.json
ESPEasy/: Command.ino  Controller.ino  ESPEasy.ino  Hardware.ino  License.txt  Misc.ino  WebServer.ino  Wifi.ino  _C001.ino  _C002.ino  _C003.ino  _C004.ino  _C005.ino  _C006.ino  _C008.ino  _C009.ino  _P001_Switch.ino  _P003_Pulse.ino  _P004_Dallas.ino  _P005_DHT.ino  _P006_BMP085.ino  _P007_PCF8591.ino  _P008_RFID.ino  _P009_MCP.ino  _P011_PME.ino  _P012_LCD.ino  _P013_HCSR04.ino  _P015_TLS2561.ino  _P016_IR.ino  _P018_Dust.ino  _P020_Ser2Net.ino  _P021_Level.ino  _P022_PCA9685.ino  _P023_OLED.ino  _P024_MLX90614.ino  _P025_ADS1115.ino  _P026_Sysinfo.ino  _P027_INA219.ino  _P029_Output.ino  _P031_SHT1X.ino  (+7 more)
MiniProExtender/: MiniProExtender.ino
TinyI2CWatchdog/: TinyI2CWatchdog.ino  TinySerialDebug.ino
boards/: esp32-cam.json  esp32-m5core2.json  esp32-odroid.json  esp32_16M.json  esp32_16M1M.json  esp32_16M8M.json  esp32_16M8M_psram.json  esp32_4M.json  esp32_4M2M.json  esp32_4M_fix.json  esp32_8M.json  esp32_solo1_4M.json  esp32c2.json  esp32c2_2M.json  esp32c2_safeboot.json  esp32c3.json  esp32c3cdc.json  esp32c6.json  esp32c6cdc-16M.json  esp32c6cdc-8M.json  esp32c6cdc.json  esp32s2.json  esp32s2_cdc.json  esp32s2cdc.json  esp32s2k12.json  esp32s3-qio_opi.json  esp32s3-qio_qspi.json  esp32s3.json  esp32s3cdc-qio_opi-16M.json  esp32s3cdc-qio_opi-8M.json  esp32s3cdc-qio_opi.json  esp32s3cdc-qio_qspi-16M.json  esp32s3cdc-qio_qspi-8M.json  esp32s3cdc-qio_qspi.json  esp8266_16M14M_board.json  esp8266_1M128k.json  esp8266_1M128k_OTA.json  esp8266_2M1M.json  esp8266_2M256.json  esp8266_4M1M_board.json  (+5 more)
distOpenTherm/: readflash_esp82XX.bat  writeflash_esp82XX.bat
docs/: builds_overview.py  make.bat  requirements.txt
hooks/: post-checkout  post-commit  post-merge
include/: ESPEasy_config.h
lib/: readme.md  readme.txt
lib/Adafruit_GFX_Library/: Adafruit_GFX.h  Adafruit_SPITFT.cpp  Adafruit_SPITFT.h  CMakeLists.txt  component.mk
lib/Adafruit_GFX_Library/Fonts/: TomThumb.h
lib/AnyRtttl/: AUTHORS  CHANGES  CMakeLists.txt  INSTALL.md  LICENSE  README.md  appveyor.yml  examples.cpp.in  keywords.txt  library.properties
lib/AnyRtttl/docs/: AnyRtttl.xcf
lib/AnyRtttl/examples/Basic/: Basic.ino
lib/AnyRtttl/examples/BlockingProgramMemoryRtttl/: BlockingProgramMemoryRtttl.ino
lib/AnyRtttl/examples/BlockingRtttl/: BlockingRtttl.ino
lib/AnyRtttl/examples/BlockingWithNonBlocking/: BlockingWithNonBlocking.ino
lib/AnyRtttl/examples/ESP32Rtttl/: ESP32Rtttl.ino
lib/AnyRtttl/examples/NonBlockingProgramMemoryRtttl/: NonBlockingProgramMemoryRtttl.ino
lib/AnyRtttl/examples/NonBlockingRtttl/: NonBlockingRtttl.ino
lib/AnyRtttl/examples/NonBlockingStopBeforeEnd/: NonBlockingStopBeforeEnd.ino
lib/AnyRtttl/examples/Play10Bits/: Play10Bits.ino
lib/AnyRtttl/examples/Play16Bits/: Play16Bits.ino
lib/AnyRtttl/examples/Rtttl2Code/: Rtttl2Code.ino
lib/AnyRtttl/src/: anyrtttl.cpp  anyrtttl.h  binrtttl.cpp  binrtttl.h  pitches.h
lib/AnyRtttl/test/: TestAnyRtttl.cpp  TestAnyRtttl.h  main.cpp
lib/supertinycron/: .gitignore  .travis.yml  CMakeLists.txt  ESP-IDF.md  Makefile  appveyor.yml  ccronexpr.c  ccronexpr.h  ccronexpr_test.c  supertinycron.c
lib/supertinycron/.github/workflows/: build.yml
lib/supertinycron/test/: CMakeLists.txt
patches/: MitsubishiKJ.patch  check_puya_patch  puya.patch  puya_core2_4_x.patch  puya_v2.patch  puya_v3.patch
src/: Command.ino  CommandsManager.h  CommandsManger.cpp  Controller.ino  Convert.ino  Custom copy.h  Custom-ghtester.h  Custom-old.h  Custom-peter.h  Custom-sample.h  Custom.h  CustomIR-sample.h  DelayQueueElements.h  Dialog_Plain_12_font.h  ESPEasy-GPIO.h  ESPEasy-Globals.cpp  ESPEasy-Globals.h  ESPEasy.ino  ESPEasyEth.cpp  ESPEasyEth.h  ESPEasyEth.ino  ESPEasyEthEvent.ino  ESPEasyEthWifi.h  ESPEasyEth_ProcessEvent.ino  ESPEasyNetwork.cpp  ESPEasyNetwork.h  ESPEasyRTC.ino  ESPEasyRules.ino  ESPEasyStatistics.ino  ESPEasyStorage.ino  ESPEasyTimeTypes.cpp  ESPEasyTimeTypes.h  ESPEasyWiFiEvent.cpp  ESPEasyWiFiEvent.h  ESPEasyWiFi_credentials.cpp  ESPEasyWiFi_credentials.h  ESPEasyWiFi_credentials.ino  ESPEasyWifi.cpp  ESPEasyWifi.h  ESPEasyWifi.ino  (+377 more)
static/: anyword-hint.js  anyword-hint.min.js  cm-plugins.js  cm-plugins.min.js  codemirror.css  codemirror.js  codemirror.min.css  codemirror.min.js  codemirror_web.min.css  data_h_temp  esp.css  esp_auto.css  esp_auto.min.css  esp_auto_dark.css  esp_auto_dark.min.css  esp_darkonly.css  esp_darkonly.min.css  esp_lightonly.css  esp_lightonly.min.css  esp_variable.css  esp_variable.min.css  espeasy.js  espeasy.min.js  espeasy_default.css  espeasy_default.min.css  favicon.ino  fetch_and_parse_log.js  github_clipboard.js  p113.css  p113_script.js  p165_digit.js  reboot.js  rules_save.js  select_serialport.js  split_paste.js  timed_refresh.js  toasting.js  update_sensor_values_device_page.js
test/: .gitignore  build  buildflashserial  config.py  config.txt  configlib  controlleremu.py  erase  esp.py  espcli  espcore.py  espeasy.py  esptest  esptest.py  esptool.py  flash  node.py  output_export.cpp  pingserial  pingserial.py  reboot  reboot.py  requirements.txt  serial  test000.py  test001  test001.py  test002  test002.py  test003  test003.py  test004  test005  test005.py  test006  test006.py  testall  util.py  wificonfig  wificonfig.py
tools/: ESPEasy-tools.md  build_ESPeasy.sh  create_index.sh  espeasybackup  espeasyconfig  espeasyupdate  generate-ci-matrix.py  uncrustify.cfg  upload-release.py
(+3999 files in other folders)
